// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip Has default desktop styles 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c0:focus {
  outline: none;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0080A566;
  box-shadow: 0 0 0 3px #0080A566,0 0 0 1px #0080A5;
}

<span
  class="c0"
  id="tooltip-trigger-undefined"
  tabindex="0"
>
  <svg
    color="#57666E"
    focusable="false"
    height="16"
    width="16"
  />
</span>
`;

exports[`Tooltip Has mobile styles 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c0:focus {
  outline: none;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0080A566;
  box-shadow: 0 0 0 3px #0080A566,0 0 0 1px #0080A5;
}

<span
  class="c0"
  id="tooltip-trigger-undefined"
  tabindex="0"
>
  <svg
    color="#57666E"
    focusable="false"
    height="24"
    width="24"
  />
</span>
`;

exports[`Tooltip TooltipContainer has desktop styles 1`] = `
.c0 {
  background-color: #FFFFFF;
  border: 1px solid #57666E;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 0.875rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.25rem;
  max-width: 327px;
  min-height: 32px;
  padding: var(--spacing-1x);
  -webkit-transition: opacity 300ms;
  transition: opacity 300ms;
  z-index: 1000;
}

.c1 {
  height: 1rem;
  position: absolute;
  width: 1rem;
}

.c1::before {
  border-style: solid;
  content: '';
  display: block;
  height: 0;
  margin: auto;
  width: 0;
}

.c1::after {
  border-style: solid;
  content: '';
  display: block;
  height: 0;
  margin: auto;
  position: absolute;
  width: 0;
}

.c1[data-placement*='bottom'] {
  height: 1rem;
  left: 0;
  margin-top: -0.4rem;
  top: 0;
  width: 1rem;
}

.c1[data-placement*='bottom']::before {
  border-color: transparent transparent #57666E transparent;
  border-width: 0 0.5rem 0.4rem 0.5rem;
  position: absolute;
  top: -1px;
}

.c1[data-placement*='bottom']::after {
  border-color: transparent transparent #FFFFFF transparent;
  border-width: 0 0.5rem 0.4rem 0.5rem;
}

.c1[data-placement*='top'] {
  bottom: 0;
  height: 1rem;
  left: 0;
  margin-bottom: -1rem;
  width: 1rem;
}

.c1[data-placement*='top']::before {
  border-color: #57666E transparent transparent transparent;
  border-width: 0.4rem 0.5rem 0 0.5rem;
  position: absolute;
  top: 1px;
}

.c1[data-placement*='top']::after {
  border-color: #FFFFFF transparent transparent transparent;
  border-width: 0.4rem 0.5rem 0 0.5rem;
}

.c1[data-placement*='right'] {
  height: 1rem;
  left: 0;
  margin-left: -0.7rem;
  width: 1rem;
}

.c1[data-placement*='right']::before {
  border-color: transparent #57666E transparent transparent;
  border-width: 0.5rem 0.4rem 0.5rem 0;
}

.c1[data-placement*='right']::after {
  border-color: transparent #FFFFFF transparent transparent;
  border-width: 0.5rem 0.4rem 0.5rem 0;
  left: 6px;
  top: 0;
}

.c1[data-placement*='left'] {
  height: 1rem;
  margin-right: -0.7rem;
  right: 0;
  width: 1rem;
}

.c1[data-placement*='left']::before {
  border-color: transparent transparent transparent #57666E;
  border-width: 0.5rem 0 0.5rem 0.4em;
}

.c1[data-placement*='left']::after {
  border-color: transparent transparent transparent #FFFFFF;
  border-width: 0.5rem 0 0.5rem 0.4em;
  left: 3px;
  top: 0;
}

<div
  class="c0"
>
  <div
    class="c1"
  />
  Test Content
</div>
`;

exports[`Tooltip TooltipContainer has mobile styles 1`] = `
.c0 {
  background-color: #FFFFFF;
  border: 1px solid #57666E;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.5rem;
  max-width: 327px;
  min-height: 72px;
  padding: var(--spacing-3x);
  -webkit-transition: opacity 300ms;
  transition: opacity 300ms;
  z-index: 1000;
}

.c1 {
  height: 1rem;
  position: absolute;
  width: 1rem;
}

.c1::before {
  border-style: solid;
  content: '';
  display: block;
  height: 0;
  margin: auto;
  width: 0;
}

.c1::after {
  border-style: solid;
  content: '';
  display: block;
  height: 0;
  margin: auto;
  position: absolute;
  width: 0;
}

.c1[data-placement*='bottom'] {
  height: 1rem;
  left: 0;
  margin-top: -0.4rem;
  top: 0;
  width: 1rem;
}

.c1[data-placement*='bottom']::before {
  border-color: transparent transparent #57666E transparent;
  border-width: 0 0.5rem 0.4rem 0.5rem;
  position: absolute;
  top: -1px;
}

.c1[data-placement*='bottom']::after {
  border-color: transparent transparent #FFFFFF transparent;
  border-width: 0 0.5rem 0.4rem 0.5rem;
}

.c1[data-placement*='top'] {
  bottom: 0;
  height: 1rem;
  left: 0;
  margin-bottom: -1rem;
  width: 1rem;
}

.c1[data-placement*='top']::before {
  border-color: #57666E transparent transparent transparent;
  border-width: 0.4rem 0.5rem 0 0.5rem;
  position: absolute;
  top: 1px;
}

.c1[data-placement*='top']::after {
  border-color: #FFFFFF transparent transparent transparent;
  border-width: 0.4rem 0.5rem 0 0.5rem;
}

.c1[data-placement*='right'] {
  height: 1rem;
  left: 0;
  margin-left: -0.7rem;
  width: 1rem;
}

.c1[data-placement*='right']::before {
  border-color: transparent #57666E transparent transparent;
  border-width: 0.5rem 0.4rem 0.5rem 0;
}

.c1[data-placement*='right']::after {
  border-color: transparent #FFFFFF transparent transparent;
  border-width: 0.5rem 0.4rem 0.5rem 0;
  left: 6px;
  top: 0;
}

.c1[data-placement*='left'] {
  height: 1rem;
  margin-right: -0.7rem;
  right: 0;
  width: 1rem;
}

.c1[data-placement*='left']::before {
  border-color: transparent transparent transparent #57666E;
  border-width: 0.5rem 0 0.5rem 0.4em;
}

.c1[data-placement*='left']::after {
  border-color: transparent transparent transparent #FFFFFF;
  border-width: 0.5rem 0 0.5rem 0.4em;
  left: 3px;
  top: 0;
}

<div
  class="c0"
>
  <div
    class="c1"
  />
  Test Content
</div>
`;
